--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
    
+      <nav>
+        <ul>
+  <li><a href="#"><img src="./IMG/insta.png" alt=""></a></li>
+  <li><a href="#"><img src="./IMG/twitter.png" alt=""></a></li>
+  <li><a href="#"><img src="./IMG/facebook.png" alt=""></a></li>
+  <li><a href="#"><img src="./IMG/youtube.png" alt=""></a></li>
+  </ul>
+  </nav>
+    
+    
 <section id="header">
  
     <div class="header container">
